src/job-outs/WZVtilde_sigma_K_0.04_sigma_Z_0.0141_sigma_V_0.0_sigma_Vtilde_0.1/chiUnderline_1.0_a_e_0.15_a_h_0.1_gamma_e_0.5_gamma_h_8.0_psi_e_1.5_psi_h_1.5/trial_5_XiE_layers_3_XiH_layers_3_kappa_layers_3_points_size_5_iter_num_15/run.err
  File "standard_BFGS.py", line 176
    
                                                                                                                                                                                                                                        ^
SyntaxError: unexpected EOF while parsing
